--- a/deployment/kub.manifest.yml
+++ b/deployment/kub.manifest.yml
@@ -21,100 +21,106 @@ spec:
     spec:
       containers:
         - name: buzz-server
-          image: us.gcr.io/pre-staging-255215/descript/main
-          command:
-            [
-              'node',
-              '--max-old-space-size=4096',
-              '/app/lib/revisionBounceWorker.js',
-            ]
-          resources:
-            requests:
-              cpu: 1
-              memory: 3000Mi
-            limits:
-              cpu: 2
-              memory: 6000Mi
+          image: buzzrealtime/server:latest
           env:
-            - name: CLOUDFRONT_ACCESS_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: cloudfront
-                  key: PUBLIC
-            - name: CLOUDFRONT_PRIVATE_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: cloudfront
-                  key: PRIVATE
-            - name: CLOUDAMQP_URL
-              valueFrom:
-                secretKeyRef:
-                  name: cloud-amqp
-                  key: URL
-            - name: DATABASE_URL
-              valueFrom:
-                secretKeyRef:
-                  name: database
-                  key: URL
-            - name: PUBNUB_PUBLISH_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: pubnub
-                  key: PUBLISH_KEY
-            - name: PUBNUB_SUBSCRIBE_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: pubnub
-                  key: PUBNUB_SUBSCRIBE_KEY
-            - name: AWS_ACCESS_KEY_ID
-              valueFrom:
-                secretKeyRef:
-                  name: aws
-                  key: KEY
-            - name: AWS_SECRET_ACCESS_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: aws
-                  key: SECRET
-            - name: SEGMENT_CONFIG_API_TOKEN
-              valueFrom:
-                secretKeyRef:
-                  name: segment
-                  key: API_TOKEN
-            - name: SEGMENT_DESCRIPT_WRITE_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: segment
-                  key: WRITE_KEY
-            - name: CDN_ASSET_URL
-              value: d11euk4o0j31cp.cloudfront.net
-            - name: DATABASE_REQUIRE_SSL
-              value: 'true'
-            - name: DME_LOG_LEVEL
-              value: trace
-            - name: GST_DEBUG
-              value: '3'
-            - name: GST_DEBUG_NO_COLOR
-              value: '1'
-            - name: MAX_RABBIT_CHANNELS
-              value: '25'
-            - name: NODE_ENV
-              value: 'production'
-            - name: REVISION_BOUNCE_WORKER_CHANNEL_COUNT
-              value: '2'
-            - name: REVISION_BOUNCE_USE_WEB_MEDIA_ENGINE
-              value: 'false'
-            - name: S3_ASSETS_BUCKET
-              value: 'descript-assets-testing'
-            - name: SEGMENT_CONFIG_API_URL
-              value: 'https://platform.segmentapis.com/v1beta'
-            - name: SEGMENT_DESCRIPT_WORKSPACE_SLUG
-              value: 'descript'
-            - name: SENTRY_ENVIRONMENT
-              value: staging
-            - name: SENTRY_URL
-              value: 'https://d4341a2e18514944b9ea8bf1ec1ba5ff@sentry.io/216697'
-            - name: SERVER_LOG_FORMAT
-              value: 'json'
-            - name: WORKER_LOG_LEVEL
-              value: debug
+            - name: PUBSUB_PROJECT_ID
+              value: "my-project-id"
+            - name: PUBSUB_EMULATOR_HOST
+              value: "pubsub-emulator:8681"
+            - name: BIGTABLE_EMULATOR_HOST
+              value: "bigtable-emulator:9035"
+          ports:
+            - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: buzz-server
+spec:
+  selector:
+    name: buzz-server
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: pubsub-emulator
+  labels:
+    name: pubsub-emulator
+spec:
+  selector:
+    matchLabels:
+      name: pubsub-emulator
+  replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 0
+  template:
+    metadata:
+      labels:
+        name: pubsub-emulator
+    spec:
+      containers:
+        - name: pubsub-emulator
+          image: messagebird/gcloud-pubsub-emulator:latest
+          env:
+            - name: PUBSUB_PROJECT_ID
+              value: "my-project-id"
+          ports:
+            - containerPort: 8681
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: pubsub-emulator
+spec:
+  selector:
+    name: pubsub-emulator
+  ports:
+    - protocol: TCP
+      port: 8681
+      targetPort: 8681
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: bigtable-emulator
+  labels:
+    name: bigtable-emulator
+spec:
+  selector:
+    matchLabels:
+      name: bigtable-emulator
+  replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 0
+  template:
+    metadata:
+      labels:
+        name: bigtable-emulator
+    spec:
+      containers:
+        - name: bigtable-emulator
+          image: shopify/bigtable-emulator
+          ports:
+            - containerPort: 9035
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: bigtable-emulator
+spec:
+  selector:
+    name: bigtable-emulator
+  ports:
+    - protocol: TCP
+      port: 9035
+      targetPort: 9035
