--- a/loadtest/scenario-chat.yml
+++ b/loadtest/scenario-chat.yml
@@ -1,25 +1,34 @@
 config:
-  target: "ws://localhost:8080/ws"
+  target: "wss://buzz.bobby-demo.site/ws"
+  processor: "./processor.js"
   phases:
     - duration: 100
       arrivalRate: 1
 scenarios:
   - engine: "ws"
     flow:
-#      - send:
-#          type: subscription
-#          target:
-#            channel: chat
-#            topic: test
-#          payload:
-#            data: ""
+      - function: "initWs"
+      - send:
+          type: subscription
+          target:
+            channel: chat
+            topic: "{{ topic }}"
+          payload:
+            data: ""
       - loop:
+        - send:
+              type: heartbeat
+              target:
+                channel: chat
+                topic: "{{ topic }}"
+              key: "{{ username}}"
+              payload: "{{ heartbeat }}"
         - send:
               type: message
               target:
                   channel: chat
-                  topic: test
+                  topic: "{{ topic }}"
               payload:
-                data: "eyJ1c2VybmFtZSI6InRlc3QiLCAibWVzc2FnZSI6ImhlbGxvIHdvcmxkIn0="
-        - think: 1
+                data: "{{ message }}"
+        - think: 2
         count: 100
